Sarath(1.0.0.001) -Cleaned up app component files -Updated Homepage to pass the selection ID as URL param

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,16 +1,16 @@
 <div class="content" role="main">
         <div class="card-container">
-          <a class="circle-link" id='Germany' title="Germany" routerLink="/portfolio" >
+          <a class="circle-link" id='Germany' title="Germany" [routerLink]="['/portfolio','DE']" >
             <svg id="Group_20" data-name="Group 20" width="100" height="100" viewBox="0 0 100 100">       
              <image  xlink:href="assets/images/DE_flag.png"  width="100" height="100" />
             </svg>
           </a>
-          <a class="circle-link" id='UK' title="UK" routerLink="/portfolio" >
+          <a class="circle-link" id='UK' title="UK" [routerLink]="['/portfolio','UK']" >
             <svg id="Group_20" data-name="Group 20" width="100" height="100" viewBox="0 0 100 100">       
               <image  xlink:href="assets/images/UK_flag.png"  width="100" height="100" />
              </svg>
           </a>
-          <a class="circle-link" id='USA' title="USA" routerLink="/portfolio" >
+          <a class="circle-link" id='USA' title="USA" [routerLink]="['/portfolio','US']" >
             <svg id="Group_20" data-name="Group 20" width="100" height="100" viewBox="0 0 100 100">       
               <image  xlink:href="assets/images/US_flag.png"  width="100" height="100" />
              </svg>
