--- a/src/app/datasourcing/datasourcing.component.html
+++ b/src/app/datasourcing/datasourcing.component.html
@@ -9,5 +9,5 @@
     <p>
         Each of this three is a seperate component and will be intergrated here with its own module routing and services.
     </p>
-<button routerLink="/portfolio/dashboard">Back</button>
-<button routerLink="">Home</button>
+<button (click)="previousPage()">Back</button>
+<button (click)="showHomePage()">Home</button>
