--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -13,7 +13,7 @@ i.e the same model of display for pillar list like  ADM, AM-UK etc <br> as well 
 </ul>
 
 </div>
-<button routerLink="">Back</button>
-<button routerLink="">Home</button>
-<button routerLink="/portfolio/dashboard">Forward</button>
+<button (click)="previousPage()">Back</button>
+<button (click)="showHomePage()">Home</button>
+<button (click)="nextPage()">Forward</button>
 
