--- a/src/app/home.component.css
+++ b/src/app/home.component.css
@@ -75,9 +75,9 @@
     color: #125699;
   }
 
-  
 
-  .circle-link {
+ 
+  .round-button {
     height: 120px;
     width: 120px;
     border-radius: 120px;
@@ -92,7 +92,7 @@
     transition: 1s ease-out;
   }
 
-  .circle-link:hover {
+  .round-button:hover {
     transform: translateY(-0.25rem);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   }
