--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,27 +1,28 @@
 <div class="content" role="main">
         <div class="card-container">
-          <a class="circle-link" id='Germany' title="Germany" [routerLink]="['/portfolio','DE']" >
+          <a class="round-button" id='DE' title="Germany" (click)="showPortfolio($event)" >
             <svg id="Group_20" data-name="Group 20" width="100" height="100" viewBox="0 0 100 100">       
              <image  xlink:href="assets/images/DE_flag.png"  width="100" height="100" />
             </svg>
           </a>
-          <a class="circle-link" id='UK' title="UK" [routerLink]="['/portfolio','UK']" >
+          <a class="round-button" id='UK' title="UK" (click)="showPortfolio($event)" >
             <svg id="Group_20" data-name="Group 20" width="100" height="100" viewBox="0 0 100 100">       
               <image  xlink:href="assets/images/UK_flag.png"  width="100" height="100" />
              </svg>
           </a>
-          <a class="circle-link" id='USA' title="USA" [routerLink]="['/portfolio','US']" >
+          <a class="round-button" id='US' title="USA" (click)="showPortfolio($event)" >
             <svg id="Group_20" data-name="Group 20" width="100" height="100" viewBox="0 0 100 100">       
               <image  xlink:href="assets/images/US_flag.png"  width="100" height="100" />
-             </svg>
+              </svg>
+              
           </a>   
         </div> 
       </div>
-<!--<div>
-    <button routerLink="/portfolio">
+
+ <!--<div>    <button (click)="showPortfolioOfUS()" >
 Forward
     </button>
-    <nav>
+   <nav>
         <a routerLink="/portfolio" routerLinkActive="active">Service Level</a>
     </nav>
 </div>-->
