spelling mistake correction in heading

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <div class="card card-header">
   <div class="row" >
     <div class="col-sm-4">
-        {{ project$?.name }} :: Data souring   
+        {{ project$?.name }} :: Data sourcing   
     </div>
     <div class="col-sm-8">
       Service Portfolio Dashboard
