--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -57,21 +57,21 @@
           </div>
         </div>
         <!--/.col-->
-        <!--div class="col-sm-6 col-lg-3">
+        <div class="col-sm-6 col-lg-3">
           <div class="row dashboardbtn">
             <div class="btn-group btn-group-toggle mr-3 col-sm-12 " data-toggle="buttons"
               style="align-content: bottom;">
-              <label class="btn btn-outline-secondary bg-white" [(ngModel)]="radioModel" btnRadio="1"
+              <label class="btn btn-outline-secondary bg-white"  btnRadio="1"
                 id="option1">Kraft</label>
-              <label class="btn btn-outline-secondary bg-white" [(ngModel)]="radioModel" btnRadio="2"
+              <label class="btn btn-outline-secondary bg-white"  btnRadio="2"
                 id="option2">Life</label>
-              <label class="btn btn-outline-secondary bg-white" [(ngModel)]="radioModel" btnRadio="3"
+              <label class="btn btn-outline-secondary bg-white"  btnRadio="3"
                 id="option3">CFS</label>
-              <label class="btn btn-outline-secondary bg-white" [(ngModel)]="radioModel" btnRadio="4"
+              <label class="btn btn-outline-secondary bg-white"  btnRadio="4"
                 id="option4">155</label>
             </div>
           </div>
-        </div--> 
+        </div> 
       </div>
       <!--tile/.row-->
       <div>
