1. Code formatting 2. Seperated Header component and Footer components to a seperate module 3. Overall restructing of the project

--- a/src/app/dashboard/dashboard-projects/dashboard-projects.component.html
+++ b/src/app/dashboard/dashboard-projects/dashboard-projects.component.html
@@ -10,7 +10,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let  subProject of  subProjects$">
+        <tr *ngFor="let  subProject of  subProjects$" (click)="showDatasourcing($event)">
             <td>
                 <div class="small text-muted">
                     {{subProject.name}}
