--- a/src/app/datasourcing/datasourcing.component.html
+++ b/src/app/datasourcing/datasourcing.component.html
@@ -12,5 +12,4 @@
 <p>
     Each of this three is a seperate component and will be intergrated here with its own module routing and services.
 </p>
-<button (click)="previousPage()">Back</button>
-<button (click)="showHomePage()">Home</button>
+<app-footer></app-footer>
