code changes for graphs

--- a/src/app/dashboard/dashboard-content/dashboard-content.component.html
+++ b/src/app/dashboard/dashboard-content/dashboard-content.component.html
@@ -20,7 +20,7 @@
       </div>
       <!--/.row-->
       <div class="chart-wrapper" style="height:300px;margin-top:40px;">
-        Chart 1
+        <app-linechartcomponent></app-linechartcomponent>
       </div>
     </div>
     <div class="card-body col-sm-12 col-lg-6">
@@ -36,7 +36,7 @@
       </div>
       <!--/.row-->
       <div class="chart-wrapper" style="height:300px;margin-top:40px;">
-        chart 2
+        <app-doughnutchartcomponent></app-doughnutchartcomponent>
       </div>
     </div>
   </div>
