-Added Graph tiles with current develop content

--- a/src/app/dashboard/dashboard-content/dashboard-content.component.html
+++ b/src/app/dashboard/dashboard-content/dashboard-content.component.html
@@ -27,7 +27,7 @@
       <div class="row">
         <div class="col-sm-5">
           <!-- <h4 class="card-title mb-0"># Breached SLAs Trends</h4> -->
-          <div class="small text-muted"># Breached SLAs Trends</div>
+          <div class="small text-muted"># SLA Breach by Service Pacakages</div>
         </div>
         <!--/.col-->
         <div class="col-sm-7 d-none d-md-block">
