--- a/src/app/doughnutchart/doughnutchart.component.html
+++ b/src/app/doughnutchart/doughnutchart.component.html
@@ -2,7 +2,8 @@
     <canvas baseChart 
       [data]="doughnutChartData"
       [labels]="doughnutChartLabels"
-      [chartType]="doughnutChartType">
+      [chartType]="doughnutChartType"
+      [colors]="donutColors">
     </canvas>
   </div>
   
