1. Added new component and module for projects page 2. Style fixes for header and footer 3. Some TSLint fixes

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,24 +1,23 @@
 <div>
     <div class="section group">
         <div class="col span_1_of_2">
-            <img src="assets/images/folder.png" (click)="showDashboard($event)">
+            <img src="assets/images/folder.png" (click)="showProjects($event)">
             <p>Service Package 1</p>
         </div>
         <div class="col span_1_of_2">
-            <img src="assets/images/folder.png" (click)="showDashboard($event)">
+            <img src="assets/images/folder.png" (click)="showProjects($event)">
             <p>Service Package 2</p>
         </div>
     </div>
 
     <div class="section group">
         <div class="col span_1_of_2">
-            <img src="assets/images/folder.png" (click)="showDashboard($event)">
+            <img src="assets/images/folder.png" (click)="showProjects($event)">
             <p>Service Package 3</p>
         </div>
         <div class="col span_1_of_2">
-            <img src="assets/images/folder.png" (click)="showDashboard($event)">
+            <img src="assets/images/folder.png" (click)="showProjects($event)">
             <p>Service Package 4</p>
         </div>
     </div>
 </div>
-<app-footer></app-footer>
