--- a/src/app/common/footer/footer.component.css
+++ b/src/app/common/footer/footer.component.css
@@ -8,9 +8,10 @@ body {
 }
 
 #sticky-footer {
-    position        : absolute;
-    bottom          : 0;
+    position        : fixed;
+    bottom          : 0px;
     width           : 100%;
+    height          : 10%;
     background-color: #004a94;
 }
 
@@ -27,4 +28,10 @@ body {
     border    : 0;
     background: transparent;
     cursor    : pointer;
+}
+
+.footer-text {
+    font-size  : 1rem;
+    color      : rgb(0, 0, 0);
+    font-family: Georgia, sans-serif;
 }
