--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,22 +1,22 @@
 <div>
     <div class="section group">
         <div class="col span_1_of_2">
-            <img src="assets/images/folder.png" (click)="handlePortFolioClickEvent($event)">
+            <img src="assets/images/portfolio/folder.png" (click)="handlePortFolioClickEvent($event)">
             <p>Service Package 1</p>
         </div>
         <div class="col span_1_of_2">
-            <img src="assets/images/folder.png" (click)="handlePortFolioClickEvent($event)">
+            <img src="assets/images/portfolio/folder.png" (click)="handlePortFolioClickEvent($event)">
             <p>Service Package 2</p>
         </div>
     </div>
 
     <div class="section group">
         <div class="col span_1_of_2">
-            <img src="assets/images/folder.png" (click)="handlePortFolioClickEvent($event)">
+            <img src="assets/images/portfolio/folder.png" (click)="handlePortFolioClickEvent($event)">
             <p>Service Package 3</p>
         </div>
         <div class="col span_1_of_2">
-            <img src="assets/images/folder.png" (click)="handlePortFolioClickEvent($event)">
+            <img src="assets/images/portfolio/folder.png" (click)="handlePortFolioClickEvent($event)">
             <p>Service Package 4</p>
         </div>
     </div>
