Header, footer, dashboard styles, breadcrumb template

--- a/src/app/common/footer/footer.component.css
+++ b/src/app/common/footer/footer.component.css
@@ -8,10 +8,10 @@ body {
 }
 
 #sticky-footer {
-    position        : absolute;
+    position        : fixed;
     bottom          : 0;
     width           : 100%;
-    background-color: #004a94;
+    background-color: #003781;
 }
 
 .footer-row {
