--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,6 +1,6 @@
-<body class="d-flex flex-column">
+
     <footer id="sticky-footer" class="py-4 text-white-50">
-        <div class="container">
+        <!-- <div class="container text-center">
             <div class="footer-row">
                 <div class="footer-button-div">
                     <button (click)="showHomePage()" class="footer-button">
@@ -8,9 +8,8 @@
                     </button>
                 </div>
             </div>
-        </div>
-        <div class="container text-center">
+        </div> -->
+        <div class="container text-center fa-lg">
             <small>Copyright &copy; www.allianz.com</small>
         </div>
     </footer>
-</body>
