--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,51 +13,51 @@
     <div class="animated fadeIn">
       <div class="row">
         <!--tile .row-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card text-white bg-success">
-            <div class="row">
+        <div class="col-sm-3 col-lg-3">
+          <div class="card text-white bg-success tile">
+            <div class="row tile-text">
               <div class="card-body pb-0">
                 <div class="text-value">{{ project$?.activeSLA }}</div>
                 <div class="card-">Active SLAs</div>
               </div>
-              <div class="card-body">
-                <i class="fa fa-clock-o fa-5x" aria-hidden="true"></i>
+              <div class="tile-icon">
+                <i class="fa fa-clock-o" aria-hidden="true"></i>
               </div>
             </div>
           </div>
         </div>
         <!--/.col-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card text-white bg-warning">
-            <div class="row">
+        <div class="col-sm-3 col-lg-3">
+          <div class="card text-white bg-warning tile">
+            <div class="row tile-text">
               <div class="card-body pb-0">
                 <div class="text-value">{{ project$?.atRiskSLA }}</div>
                 <div>At Risk SLAs</div>
               </div>
-              <div class="card-body">
-                <i class="fa fa-exclamation-circle fa-5x" aria-hidden="true"></i>
+              <div class="tile-icon">
+                <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
               </div>
             </div>
           </div>
         </div>
         <!--/.col-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card text-white bg-danger">
-            <div class="row">
+        <div class="col-sm-3 col-lg-3">
+          <div class="card text-white bg-danger tile">
+            <div class="row tile-text">
               <div class="card-body pb-0">
 
                 <div class="text-value">{{ project$?.activeSLA }}</div>
                 <div>Breached SLAs</div>
               </div>
 
-              <div class="card-body">
-                <i class="fa  fa-medkit fa-5x" aria-hidden="true"></i>
+              <div class="tile-icon">
+                <i class="fa  fa-ban" aria-hidden="true"></i>
               </div>
             </div>
           </div>
         </div>
         <!--/.col-->
-        <div class="col-sm-6 col-lg-3">
+        <div class="col-sm-3 col-lg-3">
           <div class="row dashboardbtn">
             <div class="btn-group btn-group-toggle mr-3 col-sm-12 " data-toggle="buttons"
               style="align-content: bottom;">
