--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 
 :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
     font-size: 20px;
     color: #333;
     box-sizing: border-box;
@@ -8,7 +8,48 @@
     -moz-osx-font-smoothing: grayscale;
   }
 .dashboardbtn {
-    position: absolute;
+    /* position: absolute;
     bottom: 0 ;
+    margin-bottom: 1.5rem; */
     margin-bottom: 1.5rem;
+    padding-top: 65px;
+}
+
+.tile-icon{
+  font-size: 2em;
+}
+
+.card-body {
+  flex: .6 1 auto;
+}
+
+.tile{
+  height: 100px;
+}
+
+.tile-text{
+  margin-top: 5%;
+}
+
+@media(max-width: 992px){
+  .tile-icon{
+    display: none;
+  }
+}
+
+@media(max-width: 768px){
+  .tile-icon{
+    font-size: 3em;
+  }
+}
+
+@media(max-width: 576px){
+  .tile-icon{
+    display: block;
+    font-size: 2em;
+  }
+
+  .tile-text{
+    margin-top: 3%;
+  }
 }
