--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid content">
   <main class="main">
     <div class="card card-header">
       <div class="row">
