table sla changes

--- a/src/app/datasourcing/key-contacts/key-contacts.component.html
+++ b/src/app/datasourcing/key-contacts/key-contacts.component.html
@@ -1,4 +1,4 @@
-
+<div class ="row keycontacts">
 <div class="row">
         <div style="margin-left: 20px" ><b>Key Contacts</b></div>
 </div>      
@@ -9,7 +9,7 @@
           <div class="row" >
             <div class="card-body pb-0" style="background-color: rgb(214, 208, 208)" >
               <div class="text-value">Service Owner(IT)</div>
-              <div class="card-">test text test text test text test text text test text text text text </div>
+              <div class="card-">test text test text test text test text text </div>
               <div><button type="button"class="btn btn-info pull-right" >Details</button></div>
             </div>
             
@@ -23,7 +23,7 @@
               <div class="row" >
                 <div class="card-body pb-0" style="background-color: rgb(214, 208, 208)" >
                   <div class="text-value">Service Owner(IT)</div>
-                  <div class="card-">test text test text test text test text text test text text text text </div>
+                  <div class="card-">test text test text t test text text text text </div>
                   <div><button type="button"class="btn btn-info pull-right" >Details</button></div>
                 </div>
                 
@@ -37,11 +37,13 @@
               <div class="row" >
                 <div class="card-body pb-0" style="background-color: rgb(214, 208, 208)" >
                   <div class="text-value">Service Owner(IT)</div>
-                  <div class="card-" >test text test text test text test text text test text text text text </div>
+                  <div class="card-" >test text test text test text text text text </div>
                   <div><button type="button"class="btn btn-info pull-right" >Details</button></div>
                 </div>
                 
               </div>
             </div>
           </div>
+          <app-services-sla></app-services-sla>
+</div>
 </div>
