--- a/src/app/dashboard/dashboard-projects/dashboard-projects.component.html
+++ b/src/app/dashboard/dashboard-projects/dashboard-projects.component.html
@@ -1,3 +1,4 @@
+<div>
 <table class="table table-responsive-sm table-hover table-outline mb-0">
     <thead class="thead-light">
         <tr>
@@ -44,3 +45,4 @@
         </tr>
     </tbody>
 </table>
+</div>
