Fileupload UI done except for styling

--- a/src/app/fileupload/document-table/document-table.component.html
+++ b/src/app/fileupload/document-table/document-table.component.html
@@ -1,1 +1,40 @@
-<p>document-table works!</p>
+<app-document-upload></app-document-upload>
+<table class="table table-responsive-sm table-hover table-outline mb-0">
+    <thead class="thead-light">
+        <tr>
+            <th class="small">SELECT</th>
+            <th class="small"></th>
+            <th class="small">FILENAME</th>
+            <th class="small">Owner</th>
+            <th class="small">STATUS</th>
+            <th class="small"></th>
+        </tr>
+    </thead>
+    <tbody>
+     <tr>
+        <td><input type="checkbox"/> </td>
+        <td><i class="fa fa-file-pdf-o" aria-hidden="true"></i></td>
+        <td ><div class="small text-muted">FileName1</div></td>
+        <td><div class="small text-muted">Bob</div></td>
+        <td><div class="small text-muted">Approved</div></td>
+        <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+      </tr>
+      <tr class="color2">
+        <td><input type="checkbox" /></td>
+        <td><i class="fa fa-file-pdf-o" aria-hidden="true"></i></td>
+        <td><div class="small text-muted">FileName1</div></td>
+        <td><div class="small text-muted">Natasha</div></td>
+        <td><div class="small text-muted">Aprroval Pending</div></td>
+        <td><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></td>
+      </tr>
+      <tr class="color2">
+        <td><input type="checkbox"/> </td>
+        <td><i class="fa fa-file-pdf-o" aria-hidden="true"></i></td>
+        <td><div class="small text-muted">FileName1</div></td>
+        <td><div class="small text-muted">Ashwin</div></td>
+        <td><div class="small text-muted">Draft</div></td>
+        <td><i class="fa fa-edit " ></i></td>
+      </tr>
+    </tbody>
+</table>
+
