--- a/src/app/fileupload/document-upload/document-upload.component.html
+++ b/src/app/fileupload/document-upload/document-upload.component.html
@@ -1,1 +1,8 @@
-<p>document-upload works!</p>
+<div ng-controller = "myCtrl">
+    <p>Contract Documents</p>
+    <div>
+        <input type="file" class="form-control" id ="myFileField"/>
+    </div>
+    <!---<button ng-click="uploadFile()" class = "btn btn-primary">Upload File</button>-->
+
+ </div>
