Header and dashboard changes as per the discussion

--- a/src/app/common/header/header.component.css
+++ b/src/app/common/header/header.component.css
@@ -1,13 +1,29 @@
 .navbar{
-    padding: .5rem 0rem;
-    background-color:#fff;
+    padding: .rem 0rem;
+    background-color:#003781;
+    color: #fff;
     position: fixed;
     width:100%;
     top: 0;
+    font-family : Georgia, sans-serif;
+    height: 50px;
 }
 
-.navbar-left img{
-  width: 75%;
+.spans,
+logo-div{
+  padding-left: 0px !important;
+}
+
+@media(max-width: 992px){
+  .navbar-left img{
+    width: 100%;
+  }
+}
+
+@media(max-width: 768px){
+  .navbar-left img{
+    width: 100%;
+  }
 }
 
 /* .brdcrmp{
