--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -7,12 +7,17 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+  .content{
+    padding-top: 60px;
+  }
+
 .dashboardbtn {
     /* position: absolute;
     bottom: 0 ;
     margin-bottom: 1.5rem; */
     margin-bottom: 1.5rem;
-    padding-top: 65px;
+    padding-top: 40px;
 }
 
 .tile-icon{
@@ -21,14 +26,11 @@
 
 .card-body {
   flex: .6 1 auto;
+  padding-top: 0px !important;
 }
 
 .tile{
-  height: 100px;
-}
-
-.tile-text{
-  margin-top: 5%;
+  height: 75px;
 }
 
 @media(max-width: 992px){
