--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid content">
+<div class="content container-fluid">
   <main class="main">
     <div class="card card-header">
       <div class="row">
@@ -16,7 +16,7 @@
         <div class="col-sm-3 col-lg-3">
           <div class="card text-white bg-success tile">
             <div class="row tile-text">
-              <div class="card-body pb-0">
+              <div class="card-body">
                 <div class="text-value">{{ project$?.activeSLA }}</div>
                 <div class="card-">Active SLAs</div>
               </div>
@@ -30,7 +30,7 @@
         <div class="col-sm-3 col-lg-3">
           <div class="card text-white bg-warning tile">
             <div class="row tile-text">
-              <div class="card-body pb-0">
+              <div class="card-body">
                 <div class="text-value">{{ project$?.atRiskSLA }}</div>
                 <div>At Risk SLAs</div>
               </div>
@@ -44,7 +44,7 @@
         <div class="col-sm-3 col-lg-3">
           <div class="card text-white bg-danger tile">
             <div class="row tile-text">
-              <div class="card-body pb-0">
+              <div class="card-body">
 
                 <div class="text-value">{{ project$?.activeSLA }}</div>
                 <div>Breached SLAs</div>
@@ -64,7 +64,7 @@
               <label class="btn btn-outline-secondary bg-white" btnRadio="1" id="option1">Kraft</label>
               <label class="btn btn-outline-secondary bg-white" btnRadio="2" id="option2">Life</label>
               <label class="btn btn-outline-secondary bg-white" btnRadio="3" id="option3">CFS</label>
-              <label class="btn btn-outline-secondary bg-white" btnRadio="4" id="option4">155</label>
+              <label class="btn btn-outline-secondary bg-white" btnRadio="4" id="option4">PMS</label>
             </div>
           </div>
         </div>
