style changes to header and footer

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light sticky-top">
     <div class="container-fluid spans">
-        <div class="col-2 logo-div">
-            <a class="navbar-left" href="#">
+        <div class="col-2 logo-div cursor-pointer">
+            <a class="navbar-left" (click)="showHomePage()">
                 <img src="assets/images/header/allianz_logo.png" alt="">
             </a>
         </div>
