--- a/src/app/common/footer/footer.component.css
+++ b/src/app/common/footer/footer.component.css
@@ -12,7 +12,7 @@ body {
     bottom          : 0px;
     width           : 100%;
     height          : 10%;
-    background-color: #004a94;
+    background-color: #003781;
 }
 
 .footer-row {
@@ -20,29 +20,16 @@ body {
 }
 
 .back-button-div,
-.footer-text-companion,
-.dummy-button-div,
-.dummy-text-companion {
+.dummy-button-div {
     width: 20%;
     float: left;
 }
 
-.home-button-div {
-    flex-grow : 1;
-    text-align: center;
-}
-
-.back-button-div button,
-.home-button-div button {
+.back-button-div button {
     border    : none;
     outline   : none;
     background: transparent;
     cursor    : pointer;
-}
-
-.home-button-div button img {
-    width : 40%;
-    height: 40%;
 }
 
 .back-button-div button img {
