--- a/src/app/dashboard/dashboard-projects/dashboard-projects.component.html
+++ b/src/app/dashboard/dashboard-projects/dashboard-projects.component.html
@@ -10,7 +10,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let  subProject of  subProjects$" (click)="showDatasourcing($event)">
+        <tr *ngFor="let  subProject of  subProjects$" (click)="showDatasourcing($event)" class="cursor-pointer">
             <td>
                 <div class="small text-muted">
                     {{subProject.name}}
