--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="content">
     <div class="section group">
         <div class="col span_1_of_2">
             <img src="assets/images/portfolio/folder.png" (click)="handlePortFolioClickEvent($event)">
