--- a/src/app/datasourcing/datasourcing.component.html
+++ b/src/app/datasourcing/datasourcing.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid content">
   <main class="main">
     <div class="card card-header">
       <div class="row">
@@ -78,4 +78,3 @@
     </div>
   </main>
 </div>
-<app-footer></app-footer>
