--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,16 +1,14 @@
-<body class="d-flex flex-column">
-    <footer id="sticky-footer" class="py-4 text-white-50">
-        <div class="container">
-            <div class="footer-row">
-                <div class="footer-button-div">
-                    <button (click)="showHomePage()" class="footer-button">
-                        <img src="assets/images/footer/home.png" width="70" height="50" alt="submit" />
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="container text-center">
-            <small>Copyright &copy; www.allianz.com</small>
-        </div>
-    </footer>
-</body>
+<footer id="sticky-footer" class="py-4 text-white-50">
+  <div class="footer-row">
+    <div class="back-button-div">
+      <button (click)="showBackPage()">
+        <img src="assets/images/footer/back.png" alt="submit" />
+      </button>
+    </div>
+    <div class="container text-center footer-text">
+      <small>Copyright &copy; www.allianz.com</small>
+    </div>
+    <div class="dummy-button-div">
+    </div>
+  </div>
+</footer>
