--- a/src/app/dashboard/dashboard-content/dashboard-content.component.html
+++ b/src/app/dashboard/dashboard-content/dashboard-content.component.html
@@ -20,14 +20,14 @@
       </div>
       <!--/.row-->
       <div class="chart-wrapper" style="height:300px;margin-top:40px;">
-        Chart 1
+        <app-linechartcomponent></app-linechartcomponent>
       </div>
     </div>
     <div class="card-body col-sm-12 col-lg-6">
       <div class="row">
         <div class="col-sm-5">
           <!-- <h4 class="card-title mb-0"># Breached SLAs Trends</h4> -->
-          <div class="small text-muted"># Breached SLAs Trends</div>
+          <div class="small text-muted"># SLA Breach by Service Pacakages</div>
         </div>
         <!--/.col-->
         <div class="col-sm-7 d-none d-md-block">
@@ -36,7 +36,7 @@
       </div>
       <!--/.row-->
       <div class="chart-wrapper" style="height:300px;margin-top:40px;">
-        chart 2
+        <app-doughnutchartcomponent></app-doughnutchartcomponent>
       </div>
     </div>
   </div>
