--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,8 @@
-<div class="container-fluid">
+<div class="content container-fluid">
   <main class="main">
     <div class="card card-header">
       <div class="row">
-        <div class="col-sm-4">
-          {{ project$?.name }} :: Data sourcing
-        </div>
+        <div class="col-sm-4">{{ project$?.name }} :: Data sourcing</div>
         <div class="col-sm-8">
           Service Portfolio Dashboard
         </div>
@@ -13,58 +11,58 @@
     <div class="animated fadeIn">
       <div class="row">
         <!--tile .row-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card text-white bg-success">
-            <div class="row">
-              <div class="card-body pb-0">
+        <div class="col-sm-3 col-lg-3">
+          <div class="card text-white bg-success tile">
+            <div class="row tile-text">
+              <div class="card-body">
                 <div class="text-value">{{ project$?.activeSLA }}</div>
                 <div class="card-">Active SLAs</div>
               </div>
-              <div class="card-body">
-                <i class="fa fa-clock-o fa-5x" aria-hidden="true"></i>
+              <div class="tile-icon">
+                <i class="fa fa-clock-o" aria-hidden="true"></i>
               </div>
             </div>
           </div>
         </div>
         <!--/.col-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card text-white bg-warning">
-            <div class="row">
-              <div class="card-body pb-0">
+        <div class="col-sm-3 col-lg-3">
+          <div class="card text-white bg-warning tile">
+            <div class="row tile-text">
+              <div class="card-body">
                 <div class="text-value">{{ project$?.atRiskSLA }}</div>
                 <div>At Risk SLAs</div>
               </div>
-              <div class="card-body">
-                <i class="fa fa-exclamation-circle fa-5x" aria-hidden="true"></i>
+              <div class="tile-icon">
+                <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
               </div>
             </div>
           </div>
         </div>
         <!--/.col-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card text-white bg-danger">
-            <div class="row">
-              <div class="card-body pb-0">
+        <div class="col-sm-3 col-lg-3">
+          <div class="card text-white bg-danger tile">
+            <div class="row tile-text">
+              <div class="card-body">
 
                 <div class="text-value">{{ project$?.activeSLA }}</div>
                 <div>Breached SLAs</div>
               </div>
 
-              <div class="card-body">
-                <i class="fa  fa-medkit fa-5x" aria-hidden="true"></i>
+              <div class="tile-icon">
+                <i class="fa  fa-ban" aria-hidden="true"></i>
               </div>
             </div>
           </div>
         </div>
         <!--/.col-->
-        <div class="col-sm-6 col-lg-3">
+        <div class="col-sm-3 col-lg-3">
           <div class="row dashboardbtn">
             <div class="btn-group btn-group-toggle mr-3 col-sm-12 " data-toggle="buttons"
               style="align-content: bottom;">
               <label class="btn btn-outline-secondary bg-white" btnRadio="1" id="option1">Kraft</label>
               <label class="btn btn-outline-secondary bg-white" btnRadio="2" id="option2">Life</label>
               <label class="btn btn-outline-secondary bg-white" btnRadio="3" id="option3">CFS</label>
-              <label class="btn btn-outline-secondary bg-white" btnRadio="4" id="option4">155</label>
+              <label class="btn btn-outline-secondary bg-white" btnRadio="4" id="option4">PMS</label>
             </div>
           </div>
         </div>
@@ -72,8 +70,8 @@
       <!--tile/.row-->
       <div>
         <app-dashboard-content></app-dashboard-content>
-      </div><!-- content of dashboard -->
+      </div>
+      <!-- content of dashboard -->
     </div>
   </main>
 </div>
-<app-footer></app-footer>
